ecmascript/parser/tests/test262-error-references/fail/d6c1c8ca399208eb.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/d6c1c8ca399208eb.js:2:12
  |
2 |       y = 1,
  |            ^

